# openzeppelin-nile-upgrades

./: .gitignore  LICENSE  README.md  compile_proxy.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: Proxy.json
nile_upgrades/: declare_impl.py  deploy_proxy.py  upgrade_proxy.py
src/nile_upgrades/: common.py  declare_impl.py  deploy_proxy.py  upgrade_proxy.py
tests/: conftest.py  test_callable.py  test_common.py  test_deploy_proxy.py  test_deploy_upgrade_proxy.py  test_main.py  test_proxy_artifact.py  test_upgrade_proxy.py
tests/integration/: test_deploy_upgrade_proxy.py
tests/integration/resources/scripts/: deploy_upgrade_proxy.py
tests/resources/contracts/: contract.cairo  contract_v2.cairo
tests/resources/scripts/: deploy_upgrade_proxy.py
